--- a/Css/style.scss
+++ b/Css/style.scss
@@ -3,6 +3,7 @@ $titleKingSize: 5em;
 $mainTitle: 2em;
 $title: 2em;
 $subTitle: 1.5em;
+$proverbeSize: 1.2em;
 $textSize: 0.9em;
 // Color
 $bgColor1: #eeedde;
@@ -50,6 +51,50 @@ html {
 /* -------- end HEADER --------*/
 
 /* -------- MAIN --------*/
+main {
+  p.proverbe {
+    font-size: $proverbeSize;
+    font-weight: bold;
+    text-align: center;
+  }
+}
+
+// - banner - //
+.inner-banner {
+  p {
+    line-height: 50px;
+    font-size: 1.5em;
+  }
+}
+// - end banner - //
+
+// - about - //
+section.about {
+  text-align: center;
+
+  h3 {
+    text-align: center;
+    font-weight: bold;
+  }
+
+  span {
+    font-weight: bold;
+  }
+}
+
+.aboutInfo article {
+  line-height: 20px;
+
+  .p2 {
+    text-align: center;
+    line-height: 40px;
+  }
+
+  .p3 {
+    text-align: left;
+  }
+}
+// - end about - //
 
 /* -------- end MAIN --------*/
 
