--- a/Css/main.scss
+++ b/Css/main.scss
@@ -19,6 +19,44 @@ $textColor2: #eeedde;
 main {
   display: flex;
   flex-direction: column;
+
+  div.icon-anchor2 {
+    position: absolute;
+    top: 10px;
+    width: 30px;
+    height: 30px;
+    right: 50%;
+    left: 48%;
+  }
+
+  div.icon-anchor3 {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    right: 50%;
+    left: 48%;
+    z-index: 1;
+  }
+
+  div.icon-anchor4 {
+    position: absolute;
+    right: auto;
+    left: auto;
+    bottom: 0px;
+    width: 30px;
+    height: 30px;
+    z-index: 1;
+  }
+
+  div.icon-anchor5 {
+    position: absolute;
+    right: auto;
+    left: auto;
+    bottom: 10px;
+    width: 30px;
+    height: 30px;
+    z-index: 1;
+  }
 }
 
 section {
@@ -30,17 +68,13 @@ section {
   height: 200px;
 }
 
-.iconImg2 {
-  width: 200px;
-  height: 200px;
-}
-
 // <--------------- end Sharing SECTION --------------------->
 
 // <--------------- SECTION About--------------------->
 
 section.about {
-  margin-top: 150px;
+  position: relative;
+  padding-top: 150px;
   margin-bottom: 50px;
 
   h2.about-title {
@@ -63,11 +97,6 @@ section.about {
     max-width: 500px;
   }
 
-  div.iconBox {
-    display: flex;
-    justify-content: center;
-  }
-
   .p3 {
     margin-left: auto;
     margin-right: auto;
@@ -83,9 +112,10 @@ section.about {
   }
 
   div.imgBox {
+    position: relative;
     display: flex;
     justify-content: center;
-    margin: 50px 0px 50px 0px;
+    padding: 50px 0px 30px 0px;
   }
 
   .imgDecoration {
