Add images && header media query

--- a/Css/carousel.scss
+++ b/Css/carousel.scss
@@ -17,8 +17,9 @@ section.carousel {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-bottom: 50px;
   padding-bottom: 100px;
-  height: 500px;
+  height: 40em;
   text-align: center;
   border-top: 1px solid $bgColor4;
 
