--- a/Css/banner.scss
+++ b/Css/banner.scss
@@ -24,6 +24,10 @@ section.banner {
   z-index: 0;
   border-bottom: 1px solid $bgColor4;
 
+  div.carousel {
+    display: none;
+  }
+
   img.ban {
     width: 100%;
     height: 80%;
@@ -34,3 +38,31 @@ section.banner {
 .inner-banner {
   margin-bottom: 50px;
 }
+
+/*<--------------- SCREEN MEDIUM SIZE ---------------------> */
+
+@media (min-width: 700px) {
+  img.ban {
+    display: none;
+  }
+
+  div.carousel {
+    width: 100%;
+    height: 50rem;
+    background-color: $bgColor3;
+  }
+
+  div.carousel slide {
+    width: 90%;
+    height: 50rem;
+  }
+}
+
+//<--------------- end SCREEN MEDIUM SIZE ---------------------> //
+
+// <--------------- SCREEN BIG SIZE --------------------->
+
+@media (min-width: 1200px) {
+}
+
+// <--------------- end SCREEN BIG SIZE --------------------->
