--- a/Css/header.scss
+++ b/Css/header.scss
@@ -19,10 +19,15 @@ header {
   border-bottom: 1px solid $bgColor4;
 
   div.icon-anchor {
-    margin-left: 20px;
+    margin-left: 10px;
+    width: 40px;
+    height: 40px;
+  }
+
+  div.img-anchor {
+    display: none;
   }
 }
-
 // <--------------- End HEADER --------------------->
 
 // <--------------- NAV --------------------->
@@ -38,8 +43,8 @@ input#menu {
   cursor: pointer;
   display: block;
   height: 20px;
-  padding: 16px;
   width: 20px;
+  padding: 16px;
 }
 
 label.iconNav {
@@ -99,6 +104,19 @@ label.iconNav {
   transition: top ease 0.3s, transform ease 0.3s 0.3s;
 }
 
+#menu:checked ~ nav {
+  width: 100px;
+  height: 280px;
+  background-color: $bgColor1;
+  box-shadow: 1px 1px 6px $bgColor4;
+  border-radius: 5px;
+  color: $bgColor3;
+}
+
+#menu:checked ~ .iconNav {
+  box-shadow: 0px 0px 0px;
+}
+
 header nav {
   position: fixed;
   right: 10px;
@@ -113,9 +131,9 @@ header nav {
   ul {
     display: flex;
     flex-direction: column;
-    text-align: center;
     margin-top: 7px;
     margin-bottom: 5px;
+    text-align: center;
     line-height: 40px;
   }
 
@@ -126,17 +144,111 @@ header nav {
   }
 }
 
-#menu:checked ~ nav {
-  width: 100px;
-  height: 280px;
-  background-color: $bgColor1;
-  box-shadow: 1px 1px 6px $bgColor4;
-  border-radius: 5px;
-  color: $bgColor3;
-}
-
-#menu:checked ~ .iconNav {
-  box-shadow: 0px 0px 0px;
-}
-
 // <--------------- End NAV --------------------->
+
+// <--------------- SCREEN MEDIUM SIZE --------------------->
+
+@media (min-width: 700px) {
+  header {
+    height: 75px;
+  }
+
+  .img-anchor {
+    display: inline !important;
+    margin-left: 20px;
+    margin-top: 5px;
+  }
+
+  img.arrow-feather {
+    width: 40px;
+    height: 40px;
+  }
+
+  div.icon-anchor {
+    display: none;
+  }
+
+  .iconNav {
+    display: none;
+  }
+
+  header nav {
+    position: absolute;
+    right: 20px;
+    display: flex;
+    justify-content: flex-end;
+    width: 60%;
+    height: fit-content;
+    overflow: visible;
+    // border: 1px solid;
+
+    ul {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      margin-right: 5%;
+      margin-bottom: 2px;
+    }
+
+    li {
+      width: 70px;
+      margin: 0px 10px 0px 10px;
+    }
+
+    li:hover {
+      width: 90px;
+    }
+  }
+}
+
+// <--------------- end SCREEN MEDIUM SIZE --------------------->
+
+// <--------------- SCREEN BIG SIZE --------------------->
+
+@media (min-width: 1200px) {
+  header {
+    height: 100px;
+  }
+
+  .arrow-feather {
+    width: 70px !important;
+    height: 70px !important;
+  }
+
+  div.icon-anchor {
+    display: none;
+  }
+
+  .iconNav {
+    display: none;
+  }
+
+  header nav {
+    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    width: 60%;
+    height: 100%;
+    padding-bottom: 20px;
+    overflow: visible;
+
+    ul {
+      display: flex;
+      flex-direction: row;
+      align-items: flex-end;
+      height: fit-content;
+    }
+
+    li {
+      width: 90px;
+      margin: 0px 10px 0px 20px;
+    }
+
+    li:hover {
+      width: 90px;
+    }
+  }
+}
+
+// <--------------- end SCREEN BIG SIZE --------------------->
