--- a/Css/style.scss
+++ b/Css/style.scss
@@ -5,7 +5,8 @@ $mainTitle: 2em;
 $title: 2em;
 $subTitle: 1.5em;
 $proverbeSize: 1.2em;
-$textSize: 0.9em;
+$textSize: 1em;
+$smallTextSize: 0.9em;
 // Color
 $bgColor1: #eeedde;
 $bgColor2: #e0ddaa;
@@ -55,7 +56,7 @@ html {
   }
 
   p {
-    font-size: $textSize;
+    font-size: $smallTextSize;
   }
 
   img.arrow-orientation {
@@ -90,13 +91,6 @@ main {
   p {
     line-height: 50px;
     font-size: 1.5em;
-  }
-}
-
-@media (min-width: 700px) {
-  h2.plume {
-    font-size: $titleKingSize;
-    font-style: italic;
   }
 }
 
@@ -135,3 +129,28 @@ section.about {
 /* -------- FOOTER --------*/
 
 /* -------- end FOOTER --------*/
+
+@media (min-width: 700px) {
+  h2.plume {
+    font-size: $titleKingSize;
+    font-style: italic;
+  }
+
+  header ul {
+    font-size: $textSize;
+  }
+}
+
+@media (min-width: 1200px) {
+  header ul {
+    font-size: $proverbeSize;
+  }
+
+  main p {
+    font-size: $proverbeSize;
+  }
+
+  main article h3 {
+    font-size: $title;
+  }
+}
