--- a/Css/footer.scss
+++ b/Css/footer.scss
@@ -53,3 +53,20 @@ footer {
     border-bottom: 1px solid $bgColor4;
   }
 }
+
+@media (min-width: 700px) {
+  .footer-contain {
+    display: flex;
+    justify-content: center;
+  }
+
+  .footer-box {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+
+  footer img {
+    width: 50px;
+    height: 50px;
+  }
+}
