Add title html property to break-carousel-img

--- a/Css/main.scss
+++ b/Css/main.scss
@@ -142,6 +142,8 @@ div.aboutInfo {
     border-top: 1px solid;
     border-bottom: 1px solid;
     border-radius: 20%;
+    margin-left: 50px;
+    margin-right: 50px;
   }
 
   .about-article:hover {
