--- a/Css/banner.scss
+++ b/Css/banner.scss
@@ -8,7 +8,7 @@ $bgColor4: #141e27;
 // <--------------- Banner --------------------->
 
 section.banner {
-  padding-top: v50px;
+  padding-top: 50px;
   width: 90%;
   display: flex;
   flex-direction: column;
