--- a/Css/carousel.scss
+++ b/Css/carousel.scss
@@ -41,16 +41,18 @@ section.carousel {
 
   div.lbls label.labelAnterior {
     content: "";
-    font-size: 50px;
+    font-size: 25px;
     position: absolute;
     left: 5vw;
+    z-index: 1;
   }
 
   div.lbls label.labelProxima {
     content: "";
-    font-size: 50px;
+    font-size: 25px;
     position: absolute;
     right: 5vw;
+    z-index: 1;
   }
 
   ul.bgs {
@@ -215,6 +217,18 @@ div.break-carousel {
 }
 
 // <--------------- end SECTION Carousel--------------------->
+
+@media (min-width: 700px) {
+  div.lbls label.labelAnterior {
+    font-size: 50px;
+    left: 35vw;
+  }
+
+  div.lbls label.labelProxima {
+    font-size: 50px;
+    right: 50vw;
+  }
+}
 
 @media (min-width: 1200px) {
   section.carousel {
