--- a/Css/main.scss
+++ b/Css/main.scss
@@ -14,8 +14,8 @@ main {
   div.icon-anchor2 {
     position: absolute;
     top: 10px;
-    right: 50%;
-    left: 49%;
+    margin-left: auto;
+    margin-right: auto;
     width: 30px;
     height: 30px;
     margin-top: 20px;
@@ -65,14 +65,21 @@ section.about {
   padding-top: 150px;
   margin-bottom: 50px;
 
+  h2 {
+    position: absolute;
+    top: 100px;
+    padding-bottom: 20px;
+  }
+
   .about-title {
     margin: 10px 0px 10px 0px;
     padding-bottom: 10px;
+    line-height: 30px;
   }
 
   h3.about-title2 {
-    margin-top: 20px;
-    margin-bottom: 21px;
+    margin-top: 12px;
+    margin-bottom: 20px;
   }
 }
 
