--- a/Css/style.scss
+++ b/Css/style.scss
@@ -100,6 +100,10 @@ main {
 section.about {
   text-align: center;
 
+  h2 {
+    font-size: $subTitle;
+  }
+
   h3 {
     text-align: center;
     font-weight: bold;
