--- a/Css/main-gallerie.scss
+++ b/Css/main-gallerie.scss
@@ -9,9 +9,17 @@ $bgColor4: #141e27;
 
 main,
 .gallerie-inner-banner,
+.gallerie-title,
+.gal-imgbox2,
 .article-contain,
-.learnBox {
+.learnBox,
+.theme-box {
   display: flex;
+}
+
+main {
+  flex-direction: column;
+  height: auto;
 
   div.icon-anchor5 {
     position: absolute;
@@ -25,18 +33,13 @@ main,
   }
 }
 
-main {
-  flex-direction: column;
-  height: auto;
-}
-
 /* --- Banner --- */
 .gallerie-banner {
   background-image: url(../img/cieletoile.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 50vh;
+  height: 35vh;
 }
 
 .gallerie-inner-banner {
@@ -47,8 +50,7 @@ main {
 
   h2 {
     position: absolute;
-    top: 300px;
-    align-self: flex-end;
+    top: 180px;
     color: $bgColor1;
   }
 }
@@ -56,16 +58,18 @@ main {
 /* --- end Banner --- */
 
 .container-fluid {
-  //   border: 1px solid;
   padding-bottom: 50px;
 }
 
 .gallerie-title,
-.learnBox {
+.learnBox,
+.theme-box {
   text-align: center;
 }
 
 .gallerie-title {
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   margin-top: 20px;
 
@@ -75,8 +79,14 @@ main {
   }
 
   ul {
+    width: 70%;
     padding: 20px;
     line-height: 50px;
+  }
+
+  a:hover {
+    border-bottom: 1px solid;
+    padding-bottom: 3px;
   }
 
   .color1,
@@ -127,14 +137,18 @@ main {
   .color4 a:hover {
     color: $bgColor4;
   }
-
-  .icon-arrow {
-    position: fixed;
-    width: 20px;
-    height: 20px;
-  }
 }
 
+.gal-imgbox2 {
+  justify-content: center;
+  align-items: center;
+}
+
+.gal-img,
+.gal-img2 {
+  width: 90%;
+  height: 90%;
+}
 /* ----- article ----- */
 
 .article-contain {
@@ -146,6 +160,22 @@ main {
   flex-direction: column;
   justify-content: space-around;
   width: 100%;
+
+  .theme-box {
+    justify-content: center;
+    align-content: center;
+    margin: auto;
+  }
+
+  .icon-anchor6 {
+    align-self: center;
+    z-index: 1;
+  }
+
+  .icon-anchor6 img {
+    width: 20px;
+    height: 20px;
+  }
 
   h3,
   h4,
@@ -183,3 +213,52 @@ main {
 /* ----- end article ----- */
 
 // <--------------- end MAIN --------------------->
+
+@media (min-width: 700px) {
+  .gallerie-banner {
+    height: 75vh;
+  }
+
+  .gallerie-inner-banner h2 {
+    top: 430px;
+  }
+
+  .gal-imgbox2 {
+    height: 300px;
+    align-items: flex-end;
+  }
+
+  img.gal-img {
+    width: 40%;
+    height: 60%;
+  }
+
+  img.gal-img2 {
+    width: 50%;
+    height: 90%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .gallerie-banner {
+    background-image: url(../img/cieletoile.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 90vh;
+  }
+
+  .gallerie-title ul {
+    width: 70%;
+  }
+
+  .gal-imgbox2 {
+    height: 500px;
+    align-items: flex-end;
+  }
+
+  img.gal-img2 {
+    width: 50%;
+    height: 80%;
+  }
+}
