--- a/Css/main-escales.scss
+++ b/Css/main-escales.scss
@@ -43,6 +43,12 @@ main {
   }
 }
 
+.voilier {
+  align-self: center;
+  padding-top: 20px;
+  width: 50%;
+  height: 50%;
+}
 /* --- end Banner --- */
 
 section.escales-wrapper {
@@ -61,16 +67,22 @@ div.separate-box {
 article {
   position: relative;
   width: 100%;
-  height: 50vh;
+  height: 60vh;
   flex-direction: row;
   flex-wrap: wrap;
   padding-top: 30px;
   padding-bottom: 70px;
   border-bottom: 1px dashed;
+  background-color: $bgColor1;
 
   img {
     width: 50%;
     height: 50%;
+  }
+
+  p {
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 
   button {
@@ -87,12 +99,8 @@ div.direction {
   padding-bottom: 20px;
 }
 
-@media (min-with: 700px) {
-  section article {
-    // border-top: 1px dashed;
-  }
-
-  .hr {
-    display: none;
+@media (min-width: 500px) {
+  article img {
+    width: 40%;
   }
 }
